<resources>
    <string name="app_name">Tetris</string>
    <string name="default_highscore">High score: 0</string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">Exit</string>
    <string name="tetris">Tetris</string>
    <string name="current_score">Current score:</string>
    <string name="high_score">High score:</string>
    <string name="back">Back</string>
</resources>