<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="2"
            android:paddingRight="5dp"
            android:paddingLeft="5dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_score"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/tv_current_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_score"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/tv_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16">
            <com.example.tetris3.view.TetrisView
                android:id="@+id/view_tetris"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginBottom="4dp">
            <Button
                android:id="@+id/btn_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@drawable/ic_baseline_arrow_left_56"/>
            <Button
                android:id="@+id/btn_drop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@drawable/ic_baseline_arrow_drop_down_56"/>
            <Button
                android:id="@+id/btn_turn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@drawable/ic_baseline_refresh_56"/>
            <Button
                android:id="@+id/btn_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@drawable/ic_baseline_arrow_right_56"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>